--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,7 +11,35 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "next": "13.5.6",
+    "@clerk/nextjs": "^4.24.1",
+    "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^5.3.1",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "axios": "^1.5.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "lucide-react": "^0.279.0",
+    "next-cloudinary": "^4.22.0",
+    "next-themes": "^0.2.1",
+    "package": "^1.0.1",
+    "postcss": "8.4.29",
+    "react-day-picker": "^8.8.2",
+    "react-hook-form": "^7.46.2",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2",
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1",
+    "prisma": "^5.3.1"
   },
   "devDependencies": {
     "typescript": "^5",
