--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6",
     "@clerk/nextjs": "^4.24.1",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.3.1",
@@ -26,11 +23,15 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.279.0",
+    "next": "13.5.6",
     "next-cloudinary": "^4.22.0",
     "next-themes": "^0.2.1",
     "package": "^1.0.1",
     "postcss": "8.4.29",
+    "prisma": "^5.4.2",
+    "react": "^18",
     "react-day-picker": "^8.8.2",
+    "react-dom": "^18",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0",
@@ -38,18 +39,17 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "zod": "^3.22.2",
-    "zustand": "^4.4.1",
-    "prisma": "^5.3.1"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "typescript": "^5"
   }
 }
